tests/baselines/reference/typeSatisfactionWithDefaultExport.errors.txt
a.ts(4,19): error TS1360: Type '{}' does not satisfy the expected type 'Foo'.
  Property 'a' is missing in type '{}' but required in type 'Foo'.


==== ./a.ts (1 errors) ====
    interface Foo {
        a: number;
    }
    export default {} satisfies Foo;
                      ~~~~~~~~~
!!! error TS1360: Type '{}' does not satisfy the expected type 'Foo'.
!!! error TS1360:   Property 'a' is missing in type '{}' but required in type 'Foo'.
!!! related TS2728 a.ts:2:5: 'a' is declared here.
    
==== ./b.ts (0 errors) ====
    interface Foo {
        a: number;
    }
    export default { a: 1 } satisfies Foo;
    